Fixed sizing for horizontal view on mobile

--- a/index.css
+++ b/index.css
@@ -15,6 +15,13 @@ body {
     }
 }
 
+@media all and (max-height: 700px) {
+  .jumbotron .container {
+    padding-top: 0;
+    /* background: blue; */
+  }
+}
+
 .jumbotron a {
   color:inherit;
   text-decoration: none;
@@ -31,7 +38,7 @@ a:hover {
   background: #25282d;
   color: #FFFF;
   padding-top: 15%;
-  /* min-height: 350px; */
+  min-height: 350px;
 }
 
 .jumbo-btn {
